--- a/event.html
+++ b/event.html
@@ -106,7 +106,7 @@
     </form>
     </div>
     
-    <button type="button" id="btnNext" onclick="wedding()" >Next</button>
+    <button type="button" id="btnNext" onclick="validation()" >Next</button>
     <script src="eventScript.js"></script>
 </body>
 </html>
